# RustNN

./: Cargo.toml
src/: lib.rs  neural_network.rs  trainer.rs  utils.rs
